--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ staticfiles/
 
 # Virtual Environment
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .venv
 env/
 venv/
