--- a/.github/workflows/master_fake-news-detector-services.yml
+++ b/.github/workflows/master_fake-news-detector-services.yml
@@ -32,6 +32,11 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
+      - name: Collect static files
+        run: |
+          source venv/bin/activate
+          python manage.py collectstatic --noinput
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
