--- a/.github/workflows/master_fake-news-len.yml
+++ b/.github/workflows/master_fake-news-len.yml
@@ -29,7 +29,7 @@ jobs:
       
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Collect static files
