--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pytz==2023.3
 pytest==7.4.3
 pytest-django==4.7.0
 pytest-cov==4.1.0
-
+beautifulsoup4==4.12.3
 # Azure deployment requirements
 gunicorn==21.2.0
 whitenoise==6.6.0
