--- a/.github/workflows/master_fake-news-russ.yml
+++ b/.github/workflows/master_fake-news-russ.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - fake-news-russ
 
 on:
@@ -26,14 +22,14 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Collect static files
         run: |
           python manage.py collectstatic --noinput
-          
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
@@ -63,7 +59,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
@@ -71,3 +66,9 @@ jobs:
           app-name: 'fake-news-russ'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A5CF542D20384586B2870CA26FAF0364 }}
+
+      # Copy `cacert.pem` to the correct location AFTER deployment
+      - name: Copy CA Certificate
+        run: |
+          mkdir -p /home/site/wwwroot/certs
+          cp $(python -c "import certifi; print(certifi.where())") /home/site/wwwroot/certs/cacert.pem
