--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,5 @@ azure-storage-blob==12.19.0  # For Azure Blob Storage
 python-decouple==3.8  # For environment variables
 mysql-connector-python==9.1.0
 certifi==2024.12.14
+psycopg2-binary==2.9.10
 #pip install -r requirements.txt
