--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pytest==7.4.3
 pytest-django==4.7.0
 pytest-cov==4.1.0
 beautifulsoup4==4.12.3
-python-dateutil=2.9.0.post0
+python-dateutil==2.9.0.post0
 # Azure deployment requirements
 gunicorn==21.2.0
 whitenoise==6.6.0
